raw-manifests/local-staging/monitoring/tempo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tempo-staging-vs
  namespace: istio-system
spec:
  hosts:
    - "tempo.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: mon-tempo-staging.monitoring.svc.cluster.local
            port:
              number: 3100
